@@ -1,6 +1,6 @@
 % File src/library/base/man/table.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2013 R Core Team
+% Copyright 1995-2016 R Core Team
 % Distributed under GPL 2 or later
 
 \name{table}
@@ -41,8 +41,10 @@ is.table(x)
     (including character strings), or a list (or data frame) whose
     components can be so interpreted.  (For \code{as.table}, arguments
     passed to specific methods; for \code{as.data.frame}, unused.)}
-  \item{exclude}{levels to remove for all factors in \code{\dots}.
-    If set to \code{NULL}, it implies \code{useNA = "always"}.  See
+  \item{exclude}{levels to remove for all factors in \code{\dots}.  If
+    it does not contain \code{\link{NA}} and \code{useNA} is not
+    specified, it implies \code{useNA = "always"}.  This may be changed
+    to \code{useNA = "ifany"} before the release of R 3.4.0.  See
     \sQuote{Details} for its interpretation for non-factor arguments.}
   \item{useNA}{whether to include \code{NA} values in the table.
     See \sQuote{Details}.  Can be abbreviated.}
